--- a/login/index.html
+++ b/login/index.html
@@ -41,6 +41,36 @@
     <footer>
         <p>&copy; 2025 WE CARE SEN CHILDREN (HK) | 聯絡我們：info@wecare.dpdns.org | 隱私政策</p>
     </footer>
+    
+    <script>
+  const form = document.getElementById('login-form');
+  const msgArea = document.getElementById('message-area');
+
+  form.addEventListener('submit', async e => {
+    e.preventDefault();
+    msgArea.textContent = '';
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
+
+    // 注意：網址變成了我們的 API 子網域
+    const response = await fetch('https://api.wecare.dpdns.org/login', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ email, password })
+    });
+
+    if (response.ok) {
+      const data = await response.json();
+      // 將通行證儲存在瀏覽器的 localStorage
+      localStorage.setItem('session_token', data.token);
+      // 手動跳轉到會員專區頁面
+      window.location.href = '/dashboard.html';
+    } else {
+      msgArea.textContent = '帳號或密碼錯誤。';
+    }
+  });
+</script>
+
 
 </body>
 </html>
