--- a/login/index.html
+++ b/login/index.html
@@ -44,40 +44,54 @@
         <p>&copy; 2025 WE CARE | 聯絡我們：info@wecare.dpdns.org | 隱私政策 | Beta</p>
     </footer>
     
-    <script>
-      // 現在這兩行都可以正確找到對應的 HTML 元素了
-      const form = document.getElementById('login-form');
-      const msgArea = document.getElementById('message-area');
+<script>
+  const form = document.getElementById('login-form');
+  const msgArea = document.getElementById('message-area');
 
-      form.addEventListener('submit', async e => {
-        e.preventDefault(); // 阻止表單預設的提交行為
-        msgArea.textContent = ''; // 清空之前的訊息
-        const email = document.getElementById('email').value;
-        const password = document.getElementById('password').value;
+  form.addEventListener('submit', async e => {
+    e.preventDefault();
+    msgArea.textContent = '正在登入...'; // 顯示處理中訊息
+    msgArea.style.color = 'blue';
 
-        try {
-            const response = await fetch('https://api.wecare.dpdns.org/login', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ email, password })
-            });
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
 
-            if (response.ok) {
-                const data = await response.json();
-                // 將通行證儲存在瀏覽器的 localStorage
-                if (data.token) {
-                    localStorage.setItem('session_token', data.token);
-                    // 手動跳轉到會員專區頁面
-                    window.location.href = '/dashboard/';
-                }
-            } else {
-                msgArea.textContent = '帳號或密碼錯誤。';
-            }
-        } catch (error) {
-            console.error('Login Error:', error);
-            msgArea.textContent = '登入時發生網路錯誤，請稍後再試。';
-        }
+    try {
+      const response = await fetch('https://api.wecare.dpdns.org/login', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ email, password })
       });
-    </script>
+
+      // --- 偵錯模式的關鍵 ---
+      // 不管成功或失敗，都先讀取後端回傳的內容
+      const responseText = await response.text();
+
+      // 在頁面上顯示詳細的偵錯資訊
+      msgArea.style.color = 'red';
+      msgArea.innerHTML = `
+        <p><strong>偵錯資訊：</strong></p>
+        <p>HTTP 狀態碼: ${response.status}</p>
+        <p>後端回應內容: ${responseText}</p>
+      `;
+
+      // 如果真的成功了，再嘗試跳轉
+      if (response.ok) {
+        msgArea.style.color = 'green';
+        msgArea.textContent = '登入成功，正在跳轉...';
+        const data = JSON.parse(responseText);
+        if (data.token) {
+          localStorage.setItem('session_token', data.token);
+          window.location.href = '/dashboard/';
+        }
+      }
+
+    } catch (error) {
+      msgArea.style.color = 'red';
+      msgArea.textContent = `前端捕捉到錯誤： ${error.message}`;
+    }
+  });
+</script>
+
 </body>
 </html>
