--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -19,7 +19,7 @@
       const token = localStorage.getItem('session_token');
       if (!token) {
         // 如果沒有通行證，直接踢回登入頁
-        window.location.href = '/login.html';
+        window.location.href = '/login';
         return;
       }
 
@@ -35,14 +35,14 @@
       } else {
         // 通行證過期或無效，踢回登入頁
         localStorage.removeItem('session_token');
-        window.location.href = '/login.html';
+        window.location.href = '/login';
       }
     });
 
     logoutBtn.addEventListener('click', e => {
       e.preventDefault();
       localStorage.removeItem('session_token');
-      window.location.href = '/login.html';
+      window.location.href = '/login';
     });
   </script>
 </body>
