--- a/login/index.html
+++ b/login/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 WE CARE | 聯絡我們：info@wecare.dpdns.org | 隱私政策 | Beta</p>
+        <p>&copy; 2025 WE CARE | 聯絡我們：info@wecare.dpdns.org | 隱私政策 | Error Verify</p>
     </footer>
     
 <script>
