--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,24 +1,70 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-<head><title>會員專區</title><link rel="stylesheet" href="/style.css"></head>
+<head>
+    <title>會員專區</title>
+    <link rel="stylesheet" href="style.css"> <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+</head>
 <body>
   <div class="container">
+    <header>
+        <p class="logo">WE CARE - 會員專區</p>
+        <nav>
+            <ul>
+                <li><a href="#" id="logout-btn">登出</a></li>
+            </ul>
+        </nav>
+    </header>
     <main class="main-content">
       <h2 id="welcome-message">載入中...</h2>
       <div id="vip-content"></div>
-      <a href="#" id="logout-btn">登出</a>
     </main>
   </div>
-  <sc ript>
-    const wel come Msg = document.getElementById('welcome-message');
-    const vipConten t = document.getElementById('vip-content');
+
+  <script>
+    // 修正了拼寫錯誤
+    const welcomeMsg = document.getElementById('welcome-message');
+    const vipContent = document.getElementById('vip-content');
     const logoutBtn = document.getElementById('logout-btn');
 
-    // 頁面載入時自動執行
+    // 當頁面載入時自動執行
     document.addEventListener('DOMContentLoaded', async () => {
       const token = localStorage.getItem('session_token');
       if (!token) {
         // 如果沒有通行證，直接踢回登入頁
-        window.location.href = '/login';
+        window.location.href = '/login/';
         return;
       }
+
+      try {
+        // 帶著通行證去 API 獲取資料
+        const response = await fetch('https://api.wecare.dpdns.org/get-vip-data', {
+          headers: { 'Authorization': `Bearer ${token}` }
+        });
+
+        if (response.ok) {
+          const data = await response.json();
+          // 用從後端拿到的資料更新頁面
+          welcomeMsg.textContent = `歡迎回來, ${data.name}!`;
+          // 使用 marked.js 將後端傳來的 Markdown 轉為 HTML 並顯示
+          vipContent.innerHTML = marked.parse(data.secretMarkdown);
+        } else {
+          // 通行證過期或無效，清除它並踢回登入頁
+          localStorage.removeItem('session_token');
+          alert('您的登入已失效，請重新登入。');
+          window.location.href = '/login/';
+        }
+      } catch (error) {
+          console.error('Error fetching VIP data:', error);
+          welcomeMsg.textContent = '載入會員資料時發生錯誤。';
+      }
+    });
+
+    // 登出按鈕的點擊事件
+    logoutBtn.addEventListener('click', e => {
+      e.preventDefault();
+      localStorage.removeItem('session_token');
+      window.location.href = '/login/';
+    });
+  </script>
+</body>
+</html>
