--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
     <title>會員專區</title>
-    <link rel="stylesheet" href="style.css"> <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <link rel="stylesheet" href="../style.css"> <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
   <div class="container">
@@ -10,7 +10,7 @@
         <p class="logo">WE CARE - 會員專區</p>
         <nav>
             <ul>
-                <li><a href="#" id="logout-btn">登出</a></li>
+                <li><a href="/login" id="logout-btn">登出</a></li>
             </ul>
         </nav>
     </header>
